...
  }
}

public enum ButtonKind {
  case buyNow
  case checkout
  case payNow
  case continueWith

  var foregroundString: String {
    switch self {
    case .buyNow:
      return Afterpay.drawable.localized.buttonBuyNowForeground
...
