...
    tableView.allowsSelection = false
    tableView.delaysContentTouches = false
    tableView.translatesAutoresizingMaskIntoConstraints = false
    tableView.register(ProductCell.self, forCellReuseIdentifier: cellIdentifier)

    let cartButton: UIButton = .primaryButton
    cartButton.setTitle("View Cart", for: .normal)
    cartButton.addTarget(self, action: #selector(didTapViewCart), for: .touchUpInside)

    view.addSubview(tableView)
    view.addSubview(cartButton)

    NSLayoutConstraint.activate([
...
